addung product from admin panel

--- a/vue/index.html
+++ b/vue/index.html
@@ -15,11 +15,6 @@
     <link rel="canonical" href="https://themeselection.com/item/sneat-bootstrap-html-admin-template/">
 
     <!-- Google Tag Manager (Default ThemeSelection: GTM-5DDHKGP, PixInvent: GTM-5J3LMKC) -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      '../../../../www.googletagmanager.com/gtm5445.html?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-5DDHKGP');</script>
     <!-- End Google Tag Manager -->
 
 
@@ -47,7 +42,7 @@
     <link rel="stylesheet" href="/src/assets/vendor/libs/apex-charts/apex-charts.css" />
 
     <!-- Page CSS -->
-
+    <link rel="stylesheet" href="/src/assets/vendor/css/pages/page-auth.css">
     <!-- Helpers -->
     <script src="/src/assets/vendor/js/helpers.js"></script>
 
@@ -60,6 +55,5 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-
   </body>
 </html>
