--- a/frontt/index.html
+++ b/frontt/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <base href="/">
         <!-- Title -->
         <title>Home-v4 | Electro - Responsive Website Template</title>
 
