--- a/frontt/index.html
+++ b/frontt/index.html
@@ -3,7 +3,7 @@
     <head>
         <base href="/">
         <!-- Title -->
-        <title>Home-v4 | Electro - Responsive Website Template</title>
+        <title>Electro</title>
 
         <!-- Required Meta Tags Always Come First -->
         <meta charset="utf-8">
@@ -29,13 +29,17 @@
         <link rel="stylesheet" href="src/assets/vendor/fancybox/jquery.fancybox.css">
         <link rel="stylesheet" href="src/assets/vendor/slick-carousel/slick/slick.css">
         <link rel="stylesheet" href="src/assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!-- CSS Electro Template -->
         <link rel="stylesheet" href="src/assets/css/theme.css">
     </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <a class="js-go-to u-go-to" href="javascript:;"
             data-position='{"bottom": 15, "right": 15 }'
             data-type="fixed"
