fixing everything (i forgor to commit again ;( )

--- a/vue/index.html
+++ b/vue/index.html
@@ -40,9 +40,10 @@
     <link rel="stylesheet" href="/src/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
     <link rel="stylesheet" href="/src/assets/vendor/libs/typeahead-js/typeahead.css" />
     <link rel="stylesheet" href="/src/assets/vendor/libs/apex-charts/apex-charts.css" />
-
+    <link rel="stylesheet" href="/src/assets/vendor/libs/swiper/swiper.css" />
     <!-- Page CSS -->
     <link rel="stylesheet" href="/src/assets/vendor/css/pages/page-auth.css">
+    <link rel="stylesheet" href="/src/assets/vendor/css/pages/ui-carousel.css" />
     <!-- Helpers -->
     <script src="/src/assets/vendor/js/helpers.js"></script>
 
